src/index.css
 /*====================
    Custom Properties
======================*/


:root{

  /* colors */
  --clr-accent: 22 65% 57%;
  --clr-light-accent: 21 94% 75%;
  --clr-dark: 0 0% 6%;
  --clr-pure-black: 0 0% 0%;
  --clr-light: 0 0% 95%;
  --clr-pure-ligt: 0 0% 98%; 
  --clr-pure-white: 0 0% 100%;

  /* font-sizes */
  --fs-900: 2rem; /* h1 */
  --fs-800: 1.75rem; /* h2 */
  --fs-700: 1.5rem; /* h3 */
  --fs-600: 1.75rem; /* h4 */
  --fs-500: 1.5rem; /* h5 */ 
  --fs-400: .9375rem; /* h6  */ 
  --fs-300: .9375rem; /* body */ 
  --fs-200:  .875rem; /* overline (input field)  */
  --fs-100: .8125rem; /* subtitle */

  /* font-weights */
  --fw-bold:700;
  --fw-reg:500;
  --fw-light:400;
}


@media(min-width:45em){
  :root{
    /* font-sizes */
    --fs-900: 3.5rem;
    --fs-800: 2.5rem; 
    --fs-700: 2rem;
  }
}


@media(min-width:55em){
  :root{
    /* font-sizes */
     --fs-400: 1.125rem;
  }
}



/*====================
        Resets
======================*/

/* box sizing */
*,
*::before,
*::after{
  box-sizing: border-box; 
}

/* reset Margins and paddings */
body,
p,
h1,
h2,
h3,
h4,
h5,
figure,
picture,
ul{
  margin: 0;
  padding: 0;
}

body{overflow-x: hidden;}

/* set up the root */
#root{
  min-height: 100vh;
  line-height: 1.5;
  font-size: var(--fs-300);
  font-weight: var(--fw-reg);
  background: hsl(var(--clr-pure-ligt));
  line-height: 1.66666;
   font-family: 'Manrope', sans-serif;
}

/* make images easier to work with */
img,
picture{
  max-width: 100%;
  display: block;
}

/* make forms easier to work with */
input,
button,
textarea,
select{
  font: inherit;
}

label{
  user-select: none;
}


/* remove animations for people who've turned them off */
@media (prefers-reduced-motion: reduce) {  
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}







/*====================
    Utility Classes
======================*/

/* general */

.flex{
  display: flex;
  gap: var(--gap,1rem);
}

.grid{
  display: grid;
  gap: var(--gap,1rem)
}

.flow > *+*{
  margin-top: var(--flow-space,1rem);
}

.container{
  padding-inline: 1.5rem;
  max-width: 80rem;
  margin-inline: auto;
}

@media(min-width:45em){
  .container{
    padding-inline: 2.5rem;
  }
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap; /* added line */
  border: 0;
}

.d-block{
  display: block;
}


/* Typography */

/* font */

.uppercase{text-transform: uppercase;}
.underline{text-decoration: underline;}

.fs-900{
  font-size: var(--fs-900);
  line-height: 1;
}

.fs-800{
  font-size: var(--fs-800);
  line-height: 1.1;
}

.fs-700{
  font-size: var(--fs-700);
  line-height: 1.1;
  letter-spacing: 1.15px;
}

.fs-600{
  font-size: var(--fs-600);
  line-height: 1.35;
}

.fs-500{
  font-size: var(--fs-500);
  line-height: 1.375;
  letter-spacing: 1.7px; 
}

.fs-400{
   font-size: var(--fs-400);
   line-height: 1.35;
   letter-spacing: 1.3px;
}

.fs-300{font-size: var(--fs-300);} 

.fs-200{
  font-size: var(--fs-200);
  line-height: 1.35;
}

.fs-100{
  font-size: var(--fs-100);
  line-height: 2;
}


.letter-spacing-1{ letter-spacing: 10px;}
.letter-spacing-2{ letter-spacing: 2px;}
.letter-spacing-3{ letter-spacing: 1.5px;}
.letter-spacing-4{ letter-spacing: 1px;}

.fw-bold{font-weight: var(--fw-bold);}
.fw-reg{font-weight:var(--fw-reg);}
.fw-light{font-weight: var(--fw-light);}

/* colors */
.bg-accent{background: hsl(var(--clr-accent));}
.bg-light{background: hsl(var(--clr-light));}
.bg-dark{background-color: hsl(var(--clr-dark));}
.bg-pure-black{background: hsl(var(--clr-pure-black));}
.bg-pure-white{background: hsl(var(--clr-pure-white));} 
 

.txt-white{color: hsl(var(--clr-pure-white));}
.txt-white-05{color: hsl(var(--clr-pure-white) / 0.5);}
.txt-black{color: hsl(var(--clr-pure-black));}
.txt-black-05{color: hsl(var(--clr-pure-black) / 0.5);}
.txt-accent{color:hsl(var(--clr-accent))} 

.br-1{
  border-radius: 8px;
}



/*====================
      Components
======================*/

/* buttons */

.btn{ 
  padding: 1rem 2rem;
  border: none ;
  cursor: pointer;
  width: 10rem;
  text-decoration: none;
  display: block;
  text-align: center;
}

.btn-default-1{ background: hsl(var(--clr-accent)); }
.btn-default-1:hover{ background-color: hsl(var(--clr-light-accent)); }

.btn-default-2{ 
  background:0;
  border: 1px solid hsl(var(--clr-pure-black));
}
.btn-default-2:hover{ 
  background-color: hsl(var(--clr-pure-black));
  color: hsl(var(--clr-pure-white));
}

.btn-default-3{
  border: 0; 
  background:0;
}

.btn-default-3 span{ 
  display: inline-block;
  margin-left:0.75rem; 
}
.btn-default-3:hover{ color:hsl(var(--clr-accent));}

.btn-default-4{ background: hsl(var(--clr-pure-black)); }
.btn-default-4:hover{ background-color: #4C4C4C }


/* form elements */

/* text-fields */

.text-field > input[type="text"]{
  border: 1px solid #CFCFCF;
  margin-top: 0.5rem;
  padding: 1rem 1.5rem;
}

.text-field > input[type="text"]:focus{
  border: 1px solid hsl(var(--clr-accent));
  caret-color: hsl(var(--clr-accent));
  outline: 0;
}

.text-field__labels{
  justify-content: space-between;
  align-items: baseline;
} 

.error-label,
.empty-label{display: none;}

.text-field.error .text-field__labels > .error-label {display: block;}
.text-field.empty .text-field__labels > .empty-label {display: block;}

.text-field.error > input[type="text"],
.text-field.empty > input[type="text"]{
  border: 2px solid #CD2C2C;
}


.text-field.error label,
.text-field.empty label{
  color: #CD2C2C;
}


.design-system{
  grid-template-columns: max-content;
}


/* radio-selection  */

.radio-selection{
  padding: 1rem;
  gap:1rem;
  border: 1px solid #CFCFCF;
}

.radio-selection:hover,
.radio-selection:has(.radio-selection__btn:checked){
  border-color: hsl(var(--clr-accent));
}
/* ... */

